fix top e initial z-index

--- a/widget/src/styles.scss
+++ b/widget/src/styles.scss
@@ -2,9 +2,9 @@
   position: fixed;
   max-width: 95vw;
   right: 0;
-  top: 50%;
+  top: 40%;
   margin-top: -32vh;
-  z-index: 1;
+  z-index: 999999999;
   display: none;
   font-family: Arial;
   color: #000;
